# polito-aml-6D-pose-estimation

./: .gitignore  Enhancing_6DPose_Estimation.ipynb  README.md  config.py  local_dataset_test.ipynb  pyproject.toml  requirements.txt  test_yolo.ipynb
checkpoints/: README.md
data/: README.md
dataset/: README.md  __init__.py  base_linemod.py  custom_dataset.py  linemod_base.py  linemod_pose.py  linemod_yolo.py  linemod_yolo_dataset.py  pose_pinhole_dataset.py
experimental_notebooks/: README.md  test1_explore_linemod.ipynb  test3_yolo2_finetuning.ipynb  test4_ResNet50_pose_rotation_only.ipynb  test4_RestNet50_pose_finetuning.ipynb  test5_baseline_pinhole_pipeline.ipynb  test5_extension_endtoend_pipeline.ipynb  test5_full_pipeline_pose_estimation.ipynb  test6_baseline_pinhole_pipeline.ipynb  test6_extension_endtoend_pipeline.ipynb  test7_baseline_vs_extension_comparison.ipynb  test8_pose_extension.ipynb  verify_units_fix.ipynb
models/: README.md  __init__.py  depth_encoder.py  meta_encoder.py  pose_estimator.py  pose_estimator_RGBD.py  pose_estimator_baseline.py  pose_estimator_endtoend.py  pose_regressor.py  yolo_detector.py
notebooks/: colab_training.ipynb  finetuning_ResNet50_endtoend.ipynb  finetuning_ResNet50_rotation_only.ipynb  finetuning_Yolo.ipynb  finetuning_rgb_baseline.ipynb  finetuning_rgb_endtoend.ipynb  pipeline_baseline.ipynb  readme.md  (+4 more)
notebooks test/: README.md  test_explore_dataset.ipynb  test_yolo1_pretrained.ipynb  test_yolo2_finetuning.ipynb  test_yolo3_pose_estimation.ipynb  test_yolo3_pose_finetuning.ipynb  test_yolo4_pose_estimation.ipynb
(+44 files in other folders)
