[project]
name = "polito-aml-6d-pose-estimation"
version = "0.1.0"
description = ""
authors = [
    {name = "ghMellow",email = "nicotermins@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
  "beautifulsoup4>=4.14.0",
  "gdown>=5.2.0",
  "matplotlib>=3.10",
  "networkx>=3.6",
  "numpy>=2.3",
  "opencv-python>=4.11",
  "pandas>=2.3",
  "pillow>=12.0",
  "polars>=1.35",
  "pyyaml>=6.0",
  "requests>=2.32",
  "scikit-learn>=1.7",
  "scipy>=1.16",
  "sympy>=1.14",
  "torch>=2.9",
  "torchvision>=0.24",
  "tqdm>=4.67",
  "ultralytics>=8.3"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
